--- a/src/main/java/com/saulpos/Resources/Languages/BundleName_bg_BG.properties
+++ b/src/main/java/com/saulpos/Resources/Languages/BundleName_bg_BG.properties
@@ -1,4 +1,4 @@
 window.title=Primerna Aplikaciq na generatora na CRUD
 custom.button=Personaliziran buton
-custom.button.clicked=Personaliziraniqt buton e click-nat
-addnew.button=Dobavi Nov
+custom.button.clicked=Personaliziraniqt buton e clicknat
+addNewButton.button=Dobavi
