--- a/src/main/resources/BundleName_en_US.properties
+++ b/src/main/resources/BundleName_en_US.properties
@@ -7,3 +7,13 @@ deleteButton.button=Delete
 refreshButton.button=Refresh
 search.label=Search:
 name=Name
+total=Total
+items=items
+description=Description
+password=Password
+price=Price
+measuringUnit=Measuring unit
+currency=Currency
+isAvailable=Is available
+initializationDate=Initialization date
+wideDescription=Wide description
