--- a/src/main/resources/BundleName_bg_BG.properties
+++ b/src/main/resources/BundleName_bg_BG.properties
@@ -5,5 +5,16 @@ addNewButton.button=Dobavi
 saveButton.button=Zapazi
 deleteButton.button=Iztrii
 refreshButton.button=Obnovi
-search.label=Tursi:
+search.label=Tursi
 name=Ime
+total=Obshto
+items=predmeti
+description=Opisanie
+password=Parola
+price=Cena
+measuringUnit=Mereva edinica
+currency=Valuta
+isAvailable=Nalichnost
+initializationDate=Data na inicializaciq
+wideDescription=Opisanie
+
