Custom Buttons improvements.

--- a/src/main/resources/BundleName_bg_BG.properties
+++ b/src/main/resources/BundleName_bg_BG.properties
@@ -17,4 +17,4 @@ currency=Valuta
 isAvailable=Nalichnost
 initializationDate=Data na inicializaciq
 wideDescription=Opisanie
-
+permissions=Razresheniya
