--- a/src/main/resources/BundleName_es_VE.properties
+++ b/src/main/resources/BundleName_es_VE.properties
@@ -17,3 +17,4 @@ currency=Moneda
 isAvailable=Esta disponible
 initializationDate=Fecha de inicializacion
 wideDescription=Descripcion detallada
+permissions=Permisos
