--- a/src/main/resources/BundleName_en_US.properties
+++ b/src/main/resources/BundleName_en_US.properties
@@ -17,3 +17,4 @@ currency=Currency
 isAvailable=Is available
 initializationDate=Initialization date
 wideDescription=Wide description
+permissions=Permissions
